@@ -1,3 +1,0 @@
-from cyther import runAsScript
-
-runAsScript()
